# diff_drive_bot

./: CMakeLists.txt  README.md  package.xml
launch/: amcl_move_base.launch  gazebo.launch  gmapping.launch  joy_teleop_launch.launch  rviz.launch
maps/: house.yaml  test_map.yaml
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rviz/: gmapping.rviz  navigation.rviz  rviz.rviz
scripts/: joy_teleop.py  keyboard_teleop.py
urdf/: macros.xacro  mybot.gazebo  mybot.xacro
worlds/: mybot.world
