<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_bot</name>
  <version>1.0.0</version>
  <description>The diff_drive_bot package</description>

  <maintainer email="f20171569@hyderabad.bits-pilani.ac.in">Devansh Dhrafani</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/devanshdhrafani</url>

  <author email="f20171569@hyderabad.bits-pilani.ac.in">Devansh Dhrafani</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>

</package>
